[package]
authors = ["Js2xxx <akucxy@163.com>"]
edition = "2024"
homepage = "https://github.com/Js2xxx/reentrant"
license = "MIT OR Apache-2.0"
name = "reentrant"
repository = "https://github.com/Js2xxx/reentrant"
version = "0.1.0"

[features]
debug = []
default = ["tls"]
global = []
tls = ["global"]

[dependencies]
